# Crusty-Crab

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
design_diagrams/pumls/: class_diagram.puml  erd.puml  layered_architecture.puml  order_sequence.puml
src/: __init__.py  app.py  deps.py
src/auth/: password_handler.py  token_handler.py
src/constants/: auth_constants.py  menu_constants.py  order_constants.py  sequence_constants.py
src/database/: __init__.py  database.py
src/enums/: __init__.py  order_status.py  user_role.py
src/exceptions/: __init__.py  app_exception.py  authentication_error.py  authentication_exception.py  authorization_error.py  authorization_exception.py  duplicate_error.py  duplicate_exception.py  invalid_operation_error.py  invalid_operation_exception.py  invalid_status_transition_error.py  invalid_status_transition_exception.py  menu_item_unavailable_error.py  menu_item_unavailable_exception.py  not_found_error.py  not_found_exception.py  order_not_modifiable_error.py  order_not_modifiable_exception.py  token_expired_error.py  token_expired_exception.py  validation_error.py  validation_exception.py
src/factories/: __init__.py  document_factory.py  menu_item_factory.py  order_factory.py
src/logging/: __init__.py  logging_config.py
src/middleware/: __init__.py  request_logging_middleware.py
src/models/: __init__.py  base_document.py  counter_document.py  menu_item_document.py  order_document.py  user_document.py
src/repositories/: __init__.py  base_repository.py  counter_repository.py  menu_item_repository.py  order_repository.py  user_repository.py
src/routes/: __init__.py  auth_router.py  menu_router.py  order_router.py  statistics_router.py  (+1 more)
tests/: __init__.py  conftest.py
(+70 files in other folders)
