[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krusty-crab"
version = "0.1.0"
description = "The Krusty Crab Restaurant Order Management API"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[tool.ruff]
# Set the max line length to 80 characters.
line-length = 80

[tool.ruff.lint]
# A = flake8-builtins: check for shadowing builtins
# B = flake8-bugbear: find possible bugs and design problems
# C4 = flake8-comprehensions: write better list/set/dict comprehensions
# D = pydocstyle: check for docstring conventions (PEP257)
# E = pycodestyle errors: check for style errors
# F = pyflakes: check for logical errors
# I = isort: check for import order
# PIE = flake8-pie: check for various improvements
# PLC = Pylint conventions: check for conventions
# PLE = Pylint errors: check for errors
# PLW = Pylint warnings: check for warnings
# RUF = Ruff-specific rules
# SIM = flake8-simplify: check for simplifications
# TID = flake8-tidy-imports: check for tidy imports
# ARG = flake8-unused-arguments: check for unused arguments
select = ["A", "B", "C4", "D", "E", "F", "I", "PIE", "PLC", "PLE", "PLW", "RUF", "SIM", "TID", "ARG"]
ignore = ["D413", "D203", "D213", "B008", "E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/logging/__init__.py" = ["A005"]
# Enable auto-fixing of all violations.
fixable = ["ALL"]

[tool.ruff.format]
# Use double quotes for strings, like Black.
quote-style = "double"
# Indent with spaces, rather than tabs, like Black.
indent-style = "space"
# Respect magic trailing commas, like Black.
skip-magic-trailing-comma = false
# Automatically detect the line ending.
line-ending = "auto"
